# debugger

./: .clang-format  .clang-tidy  .gitignore  .local.vimrc  CMakeLists.txt  CMakePresets.json  clean.sh  debug.sh  flake.nix  release.sh
include/: AddressMap.hpp  Breakpoint.hpp  Command.hpp  ContextManager.hpp  Die.hpp  Dwarf.hpp  ExecutableFile.hpp  ExecutionWorkflow.hpp  File.hpp  Logger.hpp  Module.hpp  Notification.hpp  Process.hpp  Section.hpp  SourceFile.hpp  Symbol.hpp  Tracee.hpp  constant.h  utils.hpp
include/command/: Command.hpp  CommandManager.hpp  CommandRegistry.hpp  ICommand.hpp
include/display/: Curses.hpp  DisplayManager.hpp  IDisplayInterface.hpp
include/dwarf/: Dwarf.hpp  DwarfFile.hpp
include/elf/: ElfFile.hpp  Header.hpp  Section.hpp  Segment.hpp  Symbol.hpp
include/utils/: Tree.hpp
preload/allocation/: allocation_client.c  allocation_server.c
src/: AddressMap.cpp  Breakpoint.cpp  Command.cpp  ContextManager.cpp  Die.cpp  Dwarf.cpp  ExecutableFile.cpp  ExecutionWorkflow.cpp  File.cpp  Logger.cpp  Module.cpp  Notification.cpp  Process.cpp  Section.cpp  SourceFile.cpp  Symbol.cpp  Tracee.cpp  main.cpp  utils.cpp
src/command/: Command.cpp  CommandManager.cpp  CommandRegistry.cpp
src/display/: Curses.cpp  DisplayManager.cpp
src/dwarf/: Dwarf.cpp  DwarfFile.cpp
src/elf/: ElfFile.cpp
